@@ -3,3 +3,4 @@
  - Adding core item to build the storage block.
  - Adding Tool Storage block.
  - Adding Tool Storage implementation.
+ - Adding Rendering tool storage information.
